# sletmaster

./: Dockerfile  app.yml  docker-compose.yml  mongo.yml  pyproject.toml
import/: areas.json  events.json  locations.json  participants.json  people.json
sletmaster/: locations.txt  main.py  seeds.py  settings.py
sletmaster/bot/: client.py
sletmaster/models/: __init__.py
sletmaster/routers/: areas_router.py  bot_router.py  events_router.py  hat_events_router.py  locations_router.py  participants_router.py  people_router.py  votes_router.py
sletmaster/thehat/: hat.py  main.py
sletmaster/thehat/events/: get_best_small_event.py  group_start.py  iteration_end.py  iteration_start.py  live_count.py  random_dist.py  unused_people.py
