[tool.poetry]
name = "sletmaster"
version = "0.1.0"
description = ""
authors = ["Alexey Naiden <alexey.nayden@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.2"
pydantic = "^1.8.2"
uvicorn = "^0.15.0"
aiohttp = {extras = ["speedups"], version = "^3.7.4"}
motor = "^2.5.1"
beanie = "^1.6.2"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
