[tool.poetry]
name = "sletmaster"
version = "0.1.0"
description = ""
authors = ["Alexey Naiden <alexey.nayden@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.12"
fastapi = "^0.68.2"
pydantic = "^1.8.2"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
aiohttp = {extras = ["speedups"], version = "^3.7.4"}
motor = "^2.5.1"
beanie = "^1.6.2"
python-dotenv = "^0.19.0"
eventlet = "^0.32.0"
python-socketio = "^5.4.1"
gevent = "^21.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
